--------------
my1sim85-0.6.0
--------------

Feature:
- load/save system and device links

Update:
- n/a

Bugfix:
- n/a

Issues:
- still missing accurate 1ms (or better) timer
  = testing some codes (promising, but no callback method! :()

--------------
my1sim85-0.5.4
--------------

Feature:
- simulation hotkeys (F8-Run, F7-Step, F6-Reset, F5-Exit)
- modified existing menu shortcut (Ctrl-F7-Sim, Ctrl-F6-Hex, Ctrl-F5-Assemble)
- editor font size can be modified using ctrl-numpad+ and ctrl-numpad-

Update:
- free running sim option removed
  = caret line is visible during sim-step
  = caret line is invisible during sim-run
- simulation status now shown on status bar
- minor change to toolbar/menu item positions
- generating hex file will be prompted
- updated console messaging code... color tagged message!
- code changes checked when app closing...

Bugfix:
- [FIXED] caret line now visible on first entering sim-mode..

Issues:
- still missing accurate 1ms (or better) timer
  = testing some codes (promising, but no callback method! :()

--------------
my1sim85-0.5.3
--------------

Feature:
- n/a

Update:
- build menu always ON system's page (was welcome page)
- minor clean-up for sample code

Bugfix:
- [FIXED] 7-segment led label for 'a' and 'dot' was wrong...

Issues:
- still missing accurate 1ms (or better) timer
  = testing some codes (promising, but no callback method! :()

--------------
my1sim85-0.5.2
--------------

Feature:
- register/memory values are randomized at start-up!
  = stress the need to know that values are 'unknown' if NOT assigned!

Update:
- faster execution on linux platform (setcaretvisible was heavy stuff!)
- added more sample codes... file renaming...
- more cosmetic changes... splash screen, etc.

Bugfix:
- n/a

Issues:
- still missing accurate 1ms (or better) timer
  = testing some codes (promising, but no callback method! :()

--------------
my1sim85-0.5.1
--------------

Feature:
- n/a

Update:
- led color change for better contrast