@@ -1,0 +1,103 @@
+[System]
+my1sim85key=my1sim85chk
+CountM=4
+CountD=3
+CountC=7
+[Memory0]
+Type=ROM
+Info=Name:2764;ReadOnly:1;Start:0000;Size:2000;
+[Memory1]
+Type=ROM
+Info=Name:2764;ReadOnly:1;Start:2000;Size:2000;
+[Memory2]
+Type=RAM
+Info=6264;ReadOnly:0;Start:8000;Size:2000;
+[Memory3]
+Type=RAM
+Info=6264;ReadOnly:0;Start:A000;Size:2000;
+[Device0]
+Type=PPI
+Info=Name:8255;Start:40;Size:04;
+[Device1]
+Type=PPI
+Info=Name:8255;Start:80;Size:04;
+[Device2]
+Type=PPI
+Info=Name:8255;Start:C0;Size:04;
+[Control0]
+Type=SWI
+PaneInfo=name:devSWI00;caption:PortB_@80;state:2103028;dir:1;layer:0;row:0;pos:2;prop:100000;bestw:178;besth:21;minw:-1;minh:-1;maxw:-1;maxh:-1;floatx:-1;floaty:-1;floatw:-1;floath:-1
+Bit0=1:1:7:128
+Bit1=1:1:6:128
+Bit2=1:1:5:128
+Bit3=1:1:4:128
+Bit4=1:1:3:128
+Bit5=1:1:2:128
+Bit6=1:1:1:128
+Bit7=1:1:0:128
+[Control1]
+Type=LED
+PaneInfo=name:devLED00;caption:PortA_@80;state:2103028;dir:1;layer:0;row:0;pos:1;prop:100000;bestw:178;besth:21;minw:-1;minh:-1;maxw:-1;maxh:-1;floatx:-1;floaty:-1;floatw:-1;floath:-1
+Bit0=1:0:7:128
+Bit1=1:0:6:128
+Bit2=1:0:5:128
+Bit3=1:0:4:128
+Bit4=1:0:3:128
+Bit5=1:0:2:128
+Bit6=1:0:1:128
+Bit7=1:0:0:128
+[Control2]
+Type=7SEG
+PaneInfo=name:dev7SEG00;caption:7segment;state:2103028;dir:3;layer:0;row:0;pos:255;prop:100000;bestw:64;besth:89;minw:-1;minh:-1;maxw:-1;maxh:-1;floatx:-1;floaty:-1;floatw:-1;floath:-1
+Bit0=0:0:0:-1
+Bit1=0:0:0:-1
+Bit2=0:0:0:-1
+Bit3=0:0:0:-1
+Bit4=0:0:0:-1
+Bit5=0:0:0:-1
+Bit6=0:0:0:-1
+Bit7=0:0:0:-1
+[Control3]
+Type=7SEG
+PaneInfo=name:dev7SEG01;caption:7segment;state:2103028;dir:3;layer:0;row:0;pos:189;prop:100000;bestw:64;besth:89;minw:-1;minh:-1;maxw:-1;maxh:-1;floatx:-1;floaty:-1;floatw:-1;floath:-1
+Bit0=0:0:0:-1
+Bit1=0:0:0:-1
+Bit2=0:0:0:-1
+Bit3=0:0:0:-1
+Bit4=0:0:0:-1
+Bit5=0:0:0:-1
+Bit6=0:0:0:-1
+Bit7=0:0:0:-1
+[Control4]
+Type=7SEG
+PaneInfo=name:dev7SEG02;caption:7segment;state:2103028;dir:3;layer:0;row:0;pos:123;prop:100000;bestw:64;besth:89;minw:-1;minh:-1;maxw:-1;maxh:-1;floatx:-1;floaty:-1;floatw:-1;floath:-1
+Bit0=0:0:0:-1
+Bit1=0:0:0:-1
+Bit2=0:0:0:-1
+Bit3=0:0:0:-1
+Bit4=0:0:0:-1
+Bit5=0:0:0:-1
+Bit6=0:0:0:-1
+Bit7=0:0:0:-1
+[Control5]
+Type=KPAD
+PaneInfo=name:devKPAD00;caption:Keypad;state:2103028;dir:3;layer:0;row:0;pos:0;prop:100000;bestw:121;besth:95;minw:-1;minh:-1;maxw:-1;maxh:-1;floatx:-1;floaty:-1;floatw:-1;floath:-1
+Bit0=0:0:0:-1
+Bit1=0:0:0:-1
+Bit2=0:0:0:-1
+Bit3=0:0:0:-1
+Bit4=0:0:0:-1
+Bit5=0:0:0:-1
+Bit6=0:0:0:-1
+Bit7=0:0:0:-1
+[Control6]
+Type=BUT
+PaneInfo=name:devBUT00;caption:Button;state:2103028;dir:1;layer:0;row:0;pos:0;prop:100000;bestw:162;besth:19;minw:-1;minh:-1;maxw:-1;maxh:-1;floatx:-1;floaty:-1;floatw:-1;floath:-1
+Bit0=0:0:0:-1
+Bit1=0:0:0:-1
+Bit2=0:0:0:-1
+Bit3=0:0:0:-1
+Bit4=0:0:0:-1
+Bit5=0:0:0:-1
+Bit6=0:0:0:-1
+Bit7=0:0:0:-1
